# Chatbot-Hackathon

./: Hello World.ipynb  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  run.py
Beispiele/RAG mit Langchain/: Hello World.ipynb  chatgptfails.md  prompts.py
Tutorial/CSV Workflow/: experiment.ipynb
Tutorial/GPT/: Chat-GPT-anlegen.md
Tutorial/RAG mit Langchain/: Hello World.ipynb
Tutorials/: chatgptfails.md
src/hackllm/backend/: langchain_connector.py
